test/files/neg/t3346b.check
t3346b.scala:14: error: implicit error;
!I evidence$1: TC[Any]
  val y = foo(1)
             ^
1 error
